fix typeahead on marketplace

--- a/app/assets/stylesheets/marketplace.css.sass
+++ b/app/assets/stylesheets/marketplace.css.sass
@@ -46,11 +46,14 @@
   margin: 0
   padding: 0
   width: calc(100% - 30px)
+  line-height: 2em
+  color: black  
   li a
     cursor: pointer
     padding: 10px 20px
+
 .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus
-  background-color: $base
+  font-weight: bold
 
 .integrated-btn
   color: $light
