--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -593,3 +593,8 @@ b, strong {
 .clear {
   margin-top: 4em;
 }
+
+// this is to control the packery object
+// .packery-sizer, .packery-object {
+//   width: 500px;
+// }
