--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -4,6 +4,9 @@
   margin: 1em;
   // background-color: $nav;
   background-image: image-url("noise.png");
+  .card-block {
+    height: 18.5rem;
+  }
 }
 
 .app-logo {
