order submissions better

--- a/app/views/odk_sf_legacy/submissions/index.html.erb
+++ b/app/views/odk_sf_legacy/submissions/index.html.erb
@@ -26,7 +26,7 @@
         <thead>
           <tr>
             <th>Submission ID</th>
-            <th>Date &amp; Time</th>
+            <th>Date &amp; Time <i class="fa fa-arrow-circle-down"></i></th>
             <th>Status</th>
             <th>Inspect</th>
             <th>Try again</th>
