--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -235,6 +235,14 @@ b, strong {
   right: 0;
 }
 
+.navbar-logo-2 {
+  background-image: image-url("new_logo_white.png");
+  height: 3em;
+  width: 3em;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
 .navbar-market {
   top: 68px;
 }
