--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <button class="navbar-toggler navbar-logo-2 hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2"></button>
     <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-      <a class="navbar-logo hidden-sm-down" href="/"><span class="sr-only">(current)</span></a>
+      <a class="navbar-logo hidden-md-down" href="/"><span class="sr-only">(current)</span></a>
       <ul class="nav navbar-nav">
-        <li class="nav-item hidden-md-up hidden-xs-down">
+        <li class="nav-item hidden-lg-up hidden-xs-down">
           <a class="nav-link navbar-logo-2" href="/"></a>
         </li>
         <li class="nav-item hidden-sm-up">
@@ -14,10 +14,10 @@
           <a class="nav-link" href="/#/marketplace">Marketplace</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Integrations</a>
-          <div class="dropdown-menu" aria-labelledby="Preview">
-            <a class="dropdown-item" href="/#/v2">How it works &nbsp;&nbsp;<i class="fa fa-flask"></i></a>
-            <a class="dropdown-item" ng-click="checkLogin('/mappings')"><i class="fa fa-tasks"></i>  &nbsp;&nbsp;Job manager</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Integration</a>
+          <div class="dropdown-menu text-center" aria-labelledby="Preview">
+            <a class="dropdown-item" href="/#/v2">How it works <i class="fa fa-flask"></i></a>
+            <a class="dropdown-item" ng-click="checkLogin('/mappings')">Job manager <i class="fa fa-tasks"></i></a>
           </div>
         </li>
         <li class="nav-item">
@@ -43,18 +43,18 @@
         <% if current_user %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %></a>
-          <div class="dropdown-menu" aria-labelledby="Preview">
-            <a class="dropdown-item" href=<%= edit_user_path(current_user) %> ng-click="$event.stopPropagation()">Settings</a>
-            <a class="dropdown-item" data-method="post" href="/logout">Log out</a>
+          <div class="dropdown-menu text-center" aria-labelledby="Preview">
+            <a class="dropdown-item" href=<%= edit_user_path(current_user) %> ng-click="$event.stopPropagation()">Settings <i class="fa fa-cog"></i></a>
+            <a class="dropdown-item" data-method="post" href="/logout">Log out <i class="fa fa-sign-out"></i></a>
           </div>
         </li>
         <% end %>
         <% unless current_user %>
         <li class="nav-item">
-          <a class="nav-link" ng-click="checkLogin()" ><i class="fa fa-lock"></i></a>
+          <a class="nav-link" ng-click="checkLogin()" ><i class="fa fa-sign-in fa-lg"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-method="get" href="/signup">Sign up!</a>
+          <a class="nav-link" data-method="get" href="/signup">Sign Up</a>
         </li>
         <% end %>
       </ul>
