--- a/app/views/user_mailer/activation_needed_email.text.erb
+++ b/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,10 +1,9 @@
-Welcome to Open[Fn], <%= @user.first_name %>.
+Welcome to OpenFn, <%= @user.first_name %>.
 
-Whether you've signed up to vote for new integrations or to start connecting your technologies right away, we're excited to have you. Please feel free to reach out if you've got any questions.
+We're so glad you've signed up. In the next few weeks we'll be moving this whole operation to a much more stable and scalable Phoenix app. (Learn more about Phoenix here: <% @phoenix %>.
 
-Your username is: <%= @user.email %>.
+To confirm your email address and activate your account, please follow this link: <%= @url %>.
 
-To confirm your email address and activate your account, follow this link: <%= @url %>.
+You'll also notice that most of the new integrations we offer aren't available here on the legacy system. If you'd like to start using these new, fast, flexible connections today, please email beta@openfn.org.
 
-Best,
-The Open[Fn] Team
+ — OpenFn
