--- a/app/views/user_mailer/activation_needed_email.text.erb
+++ b/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,9 +1,9 @@
 Welcome to OpenFn, <%= @user.first_name %>.
 
-We're so glad you've signed up. In the next few weeks we'll be moving this whole operation to a much more stable and scalable Phoenix app. (Learn more about Phoenix here: <% @phoenix %>.
-
-To confirm your email address and activate your account, please follow this link: <%= @url %>.
+We're so glad you've signed up. In the next few weeks we'll be moving this whole operation to a Phoenix app so that we can leverage the immensely powerful and scalable Erlang VM. We'll send you an email with a link to migrate your account when the time comes.
 
 You'll also notice that most of the new integrations we offer aren't available here on the legacy system. If you'd like to start using these new, fast, flexible connections today, please email beta@openfn.org.
+
+To confirm your email address and activate your account, please follow this link: <%= @url %>.
 
  — OpenFn
