--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,42 +4,12 @@
     <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
       <a class="navbar-logo hidden-md-down" href="/"><span class="sr-only">(current)</span></a>
       <ul class="nav navbar-nav">
-        <li class="nav-item hidden-lg-up hidden-xs-down">
-          <a class="nav-link navbar-logo-2" href="/"></a>
-        </li>
-        <li class="nav-item hidden-sm-up">
-          <a class="nav-link" href="/">Home</a>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.openfn.org">OpenFn.org</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/#/marketplace">Marketplace</a>
+          <a class="nav-link" ng-click="checkLogin('/mappings')">Jobs</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Integration</a>
-          <div class="dropdown-menu text-center" aria-labelledby="Preview">
-            <a class="dropdown-item" href="/#/v2">How it works <i class="fa fa-flask"></i></a>
-            <a class="dropdown-item" ng-click="checkLogin('/mappings')">Job manager <i class="fa fa-tasks"></i></a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://medium.com/@openFn" target="_blank">Content</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav pull-right">
-        <li class="nav-item">
-          <a class="nav-link" href="/#/impact">Impact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#/our_team">Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#/developers"><i class="fa fa-code"></i> Code</a>
-        </li>
-        <!-- TODO - fix plan change from pricing page for current users -->
-        <% unless current_user %>
-        <li class="nav-item">
-          <a class="nav-link" href="/#/pricing">Pricing</a>
-        </li>
-        <% end %>
         <% if current_user %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %></a>
@@ -51,10 +21,7 @@
         <% end %>
         <% unless current_user %>
         <li class="nav-item">
-          <a class="nav-link" ng-click="checkLogin()" ><i class="fa fa-sign-in fa-lg"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-method="get" href="/signup">Sign Up</a>
+          <a class="nav-link" ng-click="checkLogin()" >Sign In</a>
         </li>
         <% end %>
       </ul>
